--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yahtzee",
   "version": "0.1.0",
   "private": true,
+   "homepage": "https://nikkipeel.github.io/yahtzee/",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
